Сетка Седоны на проверку

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     <main class="container">
       <div class="greetings">
         <img class="title" src="img/index-welcome.png" width="188" height="45" alt="welcome">
-        <img class="line" src="img/index-brown-line.png" width="256" height="2" alt="">
-        <img class="gorgeous" src="img/index-to-the-gorgeous.png" width="176" height="30" alt="to the gorgeous">
+        <img class="line" src="img/index-gorgeous-line.png" width="256" height="30" alt="to the gorgeous">
         <img class="sedona" src="img/index-Sedona.png" width="458" height="78" alt="sedona">
         <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="296" height="80" alt="because th Grand Canyon sucks!">
       </div>
@@ -79,7 +78,7 @@
             <div>Да, по нему можно пройти, если конечно осмелитесь!</div>
             </div>
           </div>
-          <div class="attractions-logistics">
+          <div class="attractions-logistics clearfix">
             <div class="column-2 attractions-square">
               <div class="attractions-square-text">Небольшая площадь</div>
               <div class="attractions-square-number">- №3 -</div>
@@ -104,9 +103,8 @@
           <br>
           и мы покажем вам лучшие предложения гостиниц в Седоне
         </div>
-        <button class="index-hotel-search">Поиск гостиницы в Седоне</button>
-      </div>
-      <div class="geolocation">
+          <button class="index-hotel-search">Поиск гостиницы в Седоне</button>
+        </div>
         <div class="index-modal">
           <form action="/echo" method="post">
             <fieldset>
@@ -125,20 +123,22 @@
             </fieldset>
           </form>
         </div>
+      <div class="geolocation">
+
       </div>
     </main>
     <footer class="main-footer">
       <div class="container">
-        <div class="footer-hashtag">
-          <p>#VISITSEDONA</p>
+        <div class="footer-hashtag foot">
+          #VisitSedona
         </div>
-        <section class="footer-social">
+        <section class="footer-social foot">
           <a class="social-btn social-btn-tw" href="#"><img src="img/t-logo.png" width="17" height="15" alt="twitter"></a>
           <a class="social-btn social-btn-fb" href="#"><img src="img/f-logo.png" width="10" height="19" alt="facebook"></a>
           <a class="social-btn social-btn-you" href="#"><img src="img/y-logo.png" width="20" height="16" alt="youtube"></a>
         </section>
-        <section class="footer-copyright">
-          <p>WEBSITE BY</p>
+        <section class="footer-copyright foot">
+          Website by
           <a class="logo-image" href="#">
             <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
           </a>
