--- a/inner.html
+++ b/inner.html
@@ -17,6 +17,9 @@
             <a href="#">Фото и видео</a>
           </li>
         </ul>
+        <div class="index-logo">
+          <img src="img/logo-both.png" width="138" height="70" alt="лого">
+        </div>
         <ul class="main-navigation-right">
           <li>
             <a href="#">Карта штата</a>
@@ -26,9 +29,6 @@
           </li>
         </ul>
       </nav>
-      <div class="index-logo">
-        <img src="img/logo-both.png" width="138" height="70" alt="лого">
-      </div>
     </div>
   </header>
   <main class="container">
@@ -91,7 +91,7 @@
         </fieldset>
       </form>
     </div>
-    <div class="search-results">
+    <div class="search-results clearfix">
       <div class="number-items">Найдено:3</div>
       <div class="inner-sort">Сортировка</div>
       <div class="inner-types">
@@ -156,18 +156,18 @@
     </div>
     </div>
   </main>
-  <footer class="main-footer">
-    <div class="container">
-      <div class="footer-hashtag">
-        <p>#VISITSEDONA</p>
+  <footer class="inner-footer">
+    <div class="container-inner clearfix">
+      <div class="footer-hashtag inner-foot">
+        #VisitSedona
       </div>
-      <section class="footer-social">
+      <section class="footer-social inner-foot">
         <a class="social-btn social-btn-tw" href="#"><img src="img/t-logo.png" width="17" height="15" alt="twitter"></a>
         <a class="social-btn social-btn-fb" href="#"><img src="img/f-logo.png" width="10" height="19" alt="facebook"></a>
         <a class="social-btn social-btn-you" href="#"><img src="img/y-logo.png" width="20" height="16" alt="youtube"></a>
       </section>
-      <section class="footer-copyright">
-        <p>WEBSITE BY</p>
+      <section class="footer-copyright inner-foot">
+        Website by
         <a class="logo-image" href="#">
           <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
         </a>
