--- a/index.html
+++ b/index.html
@@ -1,150 +1,162 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="main-header">
-      <div class="container">
-        <nav class="main-navigation clearfix">
-          <ul class="main-navigation-left">
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Фото и видео</a>
-            </li>
-          </ul>
-          <div class="index-logo">
-            <img src="img/logo-both.png" width="138" height="70" alt="лого">
-          </div>
-          <ul class="main-navigation-right">
-            <li>
-              <a href="#">Карта штата</a>
-            </li>
-            <li>
-              <a href="#">Гостиницы</a>
-            </li>
-          </ul>
-        </nav>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+<header class="main-header">
+  <div class="container">
+    <nav class="main-navigation clearfix">
+      <ul class="main-navigation-left">
+        <li>
+          <a href="#">Информация</a>
+        </li>
+        <li>
+          <a href="#">Фото и видео</a>
+        </li>
+      </ul>
+      <div class="index-logo">
+        <img src="img/logo-both.png" width="138" height="70" alt="лого">
       </div>
-    </header>
-    <main class="container">
-      <div class="greetings">
-        <img class="title" src="img/index-welcome.png" width="188" height="45" alt="welcome">
-        <img class="line" src="img/index-gorgeous-line.png" width="256" height="30" alt="to the gorgeous">
-        <img class="sedona" src="img/index-Sedona.png" width="458" height="78" alt="sedona">
-        <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="296" height="80" alt="because th Grand Canyon sucks!">
+      <ul class="main-navigation-right">
+        <li>
+          <a href="#">Карта штата</a>
+        </li>
+        <li>
+          <a href="#">Гостиницы</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<main class="container">
+  <div class="greetings">
+    <img class="title" src="img/index-welcome.png" width="188" height="45" alt="welcome">
+    <img class="line" src="img/index-gorgeous-line.png" width="256" height="30" alt="to the gorgeous">
+    <img class="sedona" src="img/index-Sedona.png" width="458" height="78" alt="sedona">
+    <img class="taqline" src="img/index-Because-the-Grand-Canyon-sucks.png" width="296" height="80" alt="because th Grand Canyon sucks!">
+  </div>
+  <div class="index-features">
+    <div class="index-tagline">
+      Седона - небольшой городок в Аризоне,
+      <br>
+      заслуживающий большего!
+    </div>
+    <div class="index-reasons">
+      Рассмотрим 5 причин, по которым Седона лучше, чем Гранд Каньон!
+    </div>
+  </div>
+  <section class="index-city-info">
+    <div class="info-main clearfix">
+      <div class="main-text">
+        <div class="main-title">Настоящий городок</div>
+        <div class="main-number">- №1 -</div>
+        <div class="main-features">Седона - не аттракцион для туристов, там течет своя жизнь</div>
       </div>
-        <div class="index-tagline">
-          Седона - небольшой городок в Аризоне,
-          <br>
-          заслуживающий большего!
-        </div>
-        <div class="index-reasons">
-          Рассмотрим 5 причин, по которым Седона лучше, чем Гранд Каньон!
-        </div>
-        <section class="index-city-info">
-          <div class="info-main">
-            <div class="info-main-text">Настоящий городок
-              <div class="info-main-number">- №1 -</div>
-              <div>Седона - не аттракцион для туристов, там течет своя жизнь</div>
-            </div>
+    </div>
+    <div class="info-needs clearfix">
+      <div class="column info-housing">
+        <div class="info-title house">Жилье</div>
+        <div class="info-text">Рекоммендуем пожить в настоящем мотеле, как в кино!</div>
+      </div>
+      <div class="column info-food">
+        <div class="info-title food">ЕДА</div>
+        <div class="info-text">Всегда заказывайте фирменный чизбургер, вы не разочаруетесь!</div>
+      </div>
+      <div class="column info-souvenirs">
+        <div class="info-title souvenirs">Сувениры</div>
+        <div class="info-text">Не только китайского, но и местного производства!</div>
+      </div>
+    </div>
+  </section>
+  <section class="index-city-attractions">
+    <div class="attractions-main clearfix">
+      <div class="attractions-main-text">
+        <div class="main-title">Там есть мост дьявола</div>
+        <div class="main-number">- №2 -</div>
+        <div class="main-features">Да, по нему можно пройти, если конечно осмелитесь!</div>
+      </div>
+    </div>
+    <div class="attractions-logistics clearfix">
+      <div class="column-2 attractions-square">
+        <div class="main-title">Небольшая площадь</div>
+        <div class="main-number">- №3 -</div>
+        <div class="main-features">Все достопримечательности находятся очень близко!</div>
+      </div>
+      <div class="column-2 attractions-road">
+        <div class="main-title">Красивая дорога</div>
+        <div class="main-number">- №4 -</div>
+        <div class="main-features">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+      </div>
+      <div class="column-2 attractions-tourists">
+        <div class="main-title">Мало туристов</div>
+        <div class="main-number">- №5 -</div>
+        <div class="main-features">Большинство идет в Гранд Каньон и толпится там</div>
+      </div>
+    </div>
+  </section>
+  <div class="index-booking">
+    <div class="interested">Заинтересовались?</div>
+    <div class="index-advice">
+      Укажите предполагаемые даты поездки,
+      <br>
+      и мы покажем вам лучшие предложения гостиниц в Седоне
+    </div>
+    <button class="index-btn btn">Поиск гостиницы в Седоне</button>
+  </div>
+  <div class="index-modal">
+    <form class="index-form"action="/echo" method="post">
+      <!--<legend>Букинг в Седоне</legend>-->
+      <div class="index-modal-title">
+        <label class="label-date check-in pic" for="date-check-in">Дата заезда:</label>
+        <input class="input-date" type="text" id="date-check-in" placeholder="24 апреля 2017" required>
+        <label class="label-date check-out pic" for="date-check-out">Дата выезда:</label>
+        <input class="input-date" type="text" id="date-check-out" placeholder="4 июля 2017" required>
+        <div class="index-amount clearfix">
+          <div class="index-amount-adult">
+            <label class="label-amount label-adult pic" for="amount-adult">Взрослые:</label>
+            <input class="input-amount adult" type="text" value="2" min="1" max="50" step="1" id="amount-adult" name="amount-adult" required>
           </div>
-          <div class="info-needs">
-            <div class="column info-housing">
-              <img src="img/index-house.png" width="75" height="72" alt="house">
-              <div class="info-housing-text">Жилье</div>
-              <div>Рекоммендуем пожить в настоящем мотеле, как в кино!</div>
-            </div>
-            <div class="column info-food">
-              <img src="img/index-burger.png" width="75" height="72" alt="burger">
-              <div class="info-food-text">ЕДА</div>
-              <div>Всегда заказывайте фирменный чизбургер, вы не разочаруетесь!</div>
-            </div>
-            <div class="column info-souvenirs">
-              <img src="img/index-gift.png" width="75" height="72" alt="gift">
-              <div class="info-souvenirs-text">Сувениры</div>
-              <div>Не только китайского, но и местного производства!</div>
-            </div>
+          <div class="index-amount-child">
+            <label class="label-amount label-child pic" for="amount-children">Дети:</label>
+            <input class="input-amount child" type="text" value="0" min="0" max="50" step="1" id="amount-children" name="amount-children">
           </div>
-        </section>
-        <section class="index-city-attractions">
-          <div class="attractions-main">
-            <div class="attractions-main-text">Там есть мост дьявола
-            <div class="attractions-main-number">- №2 -</div>
-            <div>Да, по нему можно пройти, если конечно осмелитесь!</div>
-            </div>
-          </div>
-          <div class="attractions-logistics clearfix">
-            <div class="column-2 attractions-square">
-              <div class="attractions-square-text">Небольшая площадь</div>
-              <div class="attractions-square-number">- №3 -</div>
-              <div>Все достопримечательности находятся очень близко!</div>
-            </div>
-            <div class="column-2 attractions-road">
-              <div class="attractions-road-text">Красивая дорога</div>
-              <div class="attractions-road-number">- №4 -</div>
-              <div>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
-            </div>
-            <div class="column-2 attractions-tourists">
-              <div class="attractions-tourists-text">Мало туристов</div>
-              <div class="attractions-tourists-number">- №5 -</div>
-              <div>Большинство идет в Гранд Каньон и толпится там</div>
-            </div>
-          </div>
-        </section>
-      <div class="index-booking">
-        <div class="interested">Заинтересовались?</div>
-        <div class="index-advice">
-          Укажите предполагаемые даты поездки,
-          <br>
-          и мы покажем вам лучшие предложения гостиниц в Седоне
         </div>
-          <button class="index-hotel-search">Поиск гостиницы в Седоне</button>
-        </div>
-        <div class="index-modal">
-          <form action="/echo" method="post">
-            <fieldset>
-              <legend>Букинг в Седоне</legend>
-              <div class="index-modal-title">
-                <label for="date-check-in">Дата заезда:</label>
-                <input type="date" id="date-check-in" required>
-                <label for="date-check-out">Дата выезда:</label>
-                <input type="date" id="date-check-out" required>
-                <label for="amount-adult">Взрослые:</label>
-                <input type="number" min="1" max="50" step="1" id="amount-adult" name="amount-adult" required>
-                <label for="amount-children">Дети:</label>
-                <input type="number" min="0" max="50" step="1" id="amount-children" name="amount-children">
-                <button class="index-btn">Найти</button>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      <div class="geolocation">
+        <button class="modal-btn">Найти</button>
+      </div>
+    </form>
+  </div>
+  <div class="geolocation">
 
-      </div>
-    </main>
-    <footer class="main-footer">
-      <div class="container">
-        <div class="footer-hashtag foot">
-          #VisitSedona
-        </div>
-        <section class="footer-social foot">
-          <a class="social-btn social-btn-tw" href="#"><img src="img/t-logo.png" width="17" height="15" alt="twitter"></a>
-          <a class="social-btn social-btn-fb" href="#"><img src="img/f-logo.png" width="10" height="19" alt="facebook"></a>
-          <a class="social-btn social-btn-you" href="#"><img src="img/y-logo.png" width="20" height="16" alt="youtube"></a>
-        </section>
-        <section class="footer-copyright foot">
-          Website by
-          <a class="logo-image" href="#">
-            <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
-          </a>
-        </section>
-      </div>
-    </footer>
-    <!--<<p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>-->
-  </body>
+  </div>
+</main>
+<footer class="main-footer">
+  <div class="container">
+    <div class="footer-hashtag foot">
+      #VisitSedona
+    </div>
+    <section class="footer-social foot">
+      <a class="social-btn social-btn-tw" href="#"><!--<img src="img/t-logo.png" width="17" height="15" alt="twitter">--></a>
+      <a class="social-btn social-btn-fb" href="#"><!--<img src="img/f-logo.png" width="10" height="19" alt="facebook">--></a>
+      <a class="social-btn social-btn-you" href="#"><!--<img src="img/y-logo.png" width="20" height="16" alt="youtube">--></a>
+    </section>
+    <section class="footer-copyright foot">
+      <div><a class="logo-image" href="#">Website by</a></div>
+      <!--<img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">-->
+    </section>
+  </div>
+</footer>
+<!--<<p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>-->
+</body>
 </html>
+
+
+
+
+
+
+
