--- a/inner.html
+++ b/inner.html
@@ -8,10 +8,10 @@
 <body>
   <header class="main-header">
     <div class="container">
-      <nav class="main-navigation">
+      <nav class="main-navigation clearfix">
         <ul class="main-navigation-left">
           <li>
-            <a href="#">Информация</a>
+            <a href="index.html">Информация</a>
           </li>
           <li>
             <a href="#">Фото и видео</a>
@@ -25,152 +25,191 @@
             <a href="#">Карта штата</a>
           </li>
           <li>
-            <a href="#">Гостиницы</a>
+            <a class="active">Гостиницы</a>
           </li>
         </ul>
       </nav>
     </div>
   </header>
   <main class="container">
-    <div class="container-inner">
-    <div class="inner-search">
-      <form action="/echo" method="post">
-        <fieldset>
-          <legend>Выбор гостиницы</legend>
+    <div class="inner-search clearfix">
+      <form action="/echo" method="get">
           <div class="inner-checkboxes-infrastructure">
             <div class="inner-content-title">Инфраструктура:</div>
-            <ul>
+            <ul class="inner-checkboxes-list">
               <li>
-                <input id="checkbox-pool" type="checkbox" checked>
-                <label for="checkbox-pool">Бассейна</label>
+                <label class="inner-checkbox" for="checkbox-pool">
+                  <input id="checkbox-pool" type="checkbox" checked>
+                  <span class="checkbox-indicator"></span>
+                  Бассейна
+                </label>
               </li>
               <li>
-                <input id="checkbox-parking" type="checkbox">
-                <label for="checkbox-parking">Парковка</label>
+                <label class="inner-checkbox" for="checkbox-parking">
+                  <input id="checkbox-parking" type="checkbox">
+                  <span class="checkbox-indicator"></span>
+                  Парковка
+                </label>
               </li>
               <li>
-                <input id="checkbox-wifi" type="checkbox">
-                <label for="checkbox-wifi">WI-FI</label>
+                <label class="inner-checkbox" for="checkbox-wifi">
+                  <input id="checkbox-wifi" type="checkbox">
+                  <span class="checkbox-indicator"></span>
+                  WI-FI
+                </label>
               </li>
             </ul>
           </div>
           <div class="inner-checkboxes-house">
             <div class="inner-content-title">Тип жилья:</div>
-            <ul>
+            <ul class="inner-checkboxes-list">
               <li>
-                <input id="checkbox-hotel" type="checkbox" checked>
-                <label for="checkbox-hotel">Гостиница</label>
+                <label class="inner-checkbox" for="checkbox-hotel">
+                  <input id="checkbox-hotel" type="checkbox" checked>
+                  <span class="checkbox-indicator"></span>
+                  Гостиница
+                </label>
               </li>
               <li>
-                <input id="checkbox-motel" type="checkbox" checked>
-                <label for="checkbox-motel">Мотель</label>
+                <label class="inner-checkbox" for="checkbox-motel">
+                  <input id="checkbox-motel" type="checkbox" checked>
+                  <span class="checkbox-indicator"></span>
+                  Мотель
+                </label>
               </li>
               <li>
-                <input id="checkbox-apartments" type="checkbox" checked>
-                <label for="checkbox-apartments">Апартаменты</label>
+                <label class="inner-checkbox" for="checkbox-apartments">
+                  <input id="checkbox-apartments" type="checkbox" checked>
+                  <span class="checkbox-indicator"></span>
+                  Апартаменты
+                </label>
               </li>
             </ul>
           </div>
-          <div class="inner-range-submit">
-            <div class="price">
-              <label>Стоимость в сутки:</label>
+          <div class="inner-filter-range">
+            <div class="inner-filter-range-title">
+              <label>Стоимость в сутки (р):</label>
             </div>
-            <div class="range">ОТ <input type="text" name="startprice" value="0">  ДО <input type="text" name="finalprice" value="3000"></div>
-            <div class="range-wrapper">
-              <div class="range-min">
-              </div>
-              <div class="range-max">
-              </div>
-              <div class="range-bar">
-                <div class="range-bar-white">
-                </div>
-              </div>
+            <div class="inner-price-controls">
+              <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+              <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
             </div>
-            <button class="inner-btn">Показать</button>
+            <div class="inner-range-controls">
+              <div class="scale">
+                <div class="bar"></div>
+              </div>
+              <div class="range-toggle range-toggle-min"></div>
+              <div class="range-toggle range-toggle-max"></div>
+            </div>
+            <button class="inner-btn-transparent" type="submit">Показать</button>
           </div>
-        </fieldset>
       </form>
     </div>
+    <div class="container-inner">
     <div class="search-results clearfix">
       <div class="number-items">Найдено:3</div>
-      <div class="inner-sort">Сортировка</div>
+      <div class="inner-sort">Сортировка:</div>
       <div class="inner-types">
-        <a href="#">По цене</a>
-        <a href="#">По типу</a>
-        <a href="#">По рейтингу</a>
+        <a class="types-btn active">По цене</a>
+        <a class="types-btn" href="#">По типу</a>
+        <a class="types-btn" href="#">По рейтингу</a>
       </div>
       <div class="arrows">
-        <a class="arrow-up"></a>
-        <a class="arrow-down"></a>
+        <a class="arrow arrow-up" href="#">по возрастанию</a>
+        <a class="arrow arrow-down" href="#">по убыванию</a>
       </div>
     </div>
     <div class="hotel-all">
-    <div class="hotel clearfix hotel-1">
+    <div class="hotel clearfix">
       <div class="hotel-img">
         <img src="img/inner-amara.jpg" width="135" height="90" alt="AMARA RESORT & SPA">
       </div>
       <div class="hotel-info">
-        <a href="#" class="hotel-name"><h4>Amara resort & spa</h4></a>
-        <div class="hotel-type">Гостиница</div>
-        <div class="hotel-price">от 4000 р.</div>
-        <a class="btn-details">Подробности</a>
-        <a class="btn-order">Забронировать</a>
+        <a href="#" class="hotel-name">Amara resort & spa</a>
+        <div class="hotel-info-left">
+          <div class="hotel-type-details">
+            <div class="hotel-type">Гостиница</div>
+            <a class="btn-details">Подробнее</a>
+          </div>
+        </div>
+        <div class="hotel-info-right">
+          <div class="hotel-price-order">
+            <div class="hotel-price">от 4000 р.</div>
+            <a class="btn-order">Забронировать</a>
+          </div>
+        </div>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="img/inner-stars-4.png" width="89" height="17" alt="4 stars">
-        <div class="hotel-rating-number">Рейтинг: 8.5</div>
+        <!--<img class="hotel-stars" src="img/inner-stars-4.png" width="89" height="17" alt="4 stars">-->
+        <div class="hotel-rating-number four-stars">Рейтинг: 8.5</div>
       </div>
     </div>
-    <div class="hotel clearfix hotel-2">
+    <div class="hotel clearfix">
       <div class="hotel-img">
         <img src="img/inner-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
       </div>
       <div class="hotel-info">
-        <a href="#" class="hotel-name"><h4>Desert quail inn</h4></a>
-        <div class="hotel-type">Мотель</div>
-        <div class="hotel-price">от 3000 р.</div>
-        <a class="btn-details">Подробности</a>
-        <a class="btn-order">Забронировать</a>
+        <a href="#" class="hotel-name">Desert quail inn</a>
+        <div class="hotel-info-left">
+          <div class="hotel-type-details">
+            <div class="hotel-type">Мотель</div>
+            <a class="btn-details">Подробнее</a>
+          </div>
+        </div>
+        <div class="hotel-info-right">
+          <div class="hotel-price-order">
+            <div class="hotel-price">от 3000 р.</div>
+            <a class="btn-order">Забронировать</a>
+          </div>
+        </div>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="img/inner-stars-3.png" width="67" height="17" alt="3 stars">
-        <div class="hotel-rating-number">Рейтинг: 8.9</div>
+        <!--<img class="hotel-stars" src="img/inner-stars-3.png" width="67" height="17" alt="3 stars">-->
+        <div class="hotel-rating-number three-stars">Рейтинг: 8.9</div>
       </div>
     </div>
-    <div class="hotel clearfix hotel-3">
+    <div class="hotel clearfix hotel-last">
       <div class="hotel-img">
         <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCCO DIABLO">
       </div>
       <div class="hotel-info">
-        <a href="#" class="hotel-name"><h4>Villas at pocco diablo</h4></a>
-        <div class="hotel-type">Апартаменты</div>
-        <div class="hotel-price">от 2000 р.</div>
-        <a class="btn-details">Подробности</a>
-        <a class="btn-order">Забронировать</a>
+        <a href="#" class="hotel-name">Villas at pocco diablo</a>
+        <div class="hotel-info-left">
+          <div class="hotel-type-details">
+            <div class="hotel-type">Апартаменты</div>
+            <a class="btn-details">Подробнее</a>
+          </div>
+        </div>
+        <div class="hotel-info-right">
+          <div class="hotel-price-order">
+            <div class="hotel-price">от 2000 р.</div>
+            <a class="btn-order">Забронировать</a>
+          </div>
+        </div>
       </div>
       <div class="hotel-rating">
-        <img class="hotel-stars" src="img/inner-stars-2.png" width="45" height="17" alt="2 stars">
-        <div class="hotel-rating-number">Рейтинг: 9.2</div>
+        <!--<img class="hotel-stars" src="img/inner-stars-2.png" width="45" height="17" alt="2 stars">-->
+        <div class="hotel-rating-number two-stars">Рейтинг: 9.2</div>
       </div>
     </div>
     </div>
     </div>
   </main>
   <footer class="inner-footer">
-    <div class="container-inner clearfix">
-      <div class="footer-hashtag inner-foot">
+    <div class="container clearfix">
+      <div class="footer-hashtag foot">
         #VisitSedona
       </div>
-      <section class="footer-social inner-foot">
-        <a class="social-btn social-btn-tw" href="#"><img src="img/t-logo.png" width="17" height="15" alt="twitter"></a>
-        <a class="social-btn social-btn-fb" href="#"><img src="img/f-logo.png" width="10" height="19" alt="facebook"></a>
-        <a class="social-btn social-btn-you" href="#"><img src="img/y-logo.png" width="20" height="16" alt="youtube"></a>
+      <section class="footer-social foot">
+        <a class="social-btn social-btn-tw" href="#"><!--<img src="img/t-logo.png" width="17" height="15" alt="twitter">--></a>
+        <a class="social-btn social-btn-fb" href="#"><!--<img src="img/f-logo.png" width="10" height="19" alt="facebook">--></a>
+        <a class="social-btn social-btn-you" href="#"><!--<img src="img/y-logo.png" width="20" height="16" alt="youtube">--></a>
       </section>
-      <section class="footer-copyright inner-foot">
-        Website by
-        <a class="logo-image" href="#">
+      <section class="footer-copyright foot">
+        <div><a class="logo-image" href="#">Website by</a></div>
+        <!--<a class="logo-image" href="#">
           <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
-        </a>
+        </a>-->
       </section>
     </div>
   </footer>
