--- a/inner.html
+++ b/inner.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -125,7 +127,7 @@
         <img src="img/inner-amara.jpg" width="135" height="90" alt="AMARA RESORT & SPA">
       </div>
       <div class="hotel-info">
-        <a href="#" class="hotel-name">Amara resort & spa</a>
+        <div><a href="#" class="hotel-name">Amara resort & spa</a></div>
         <div class="hotel-info-left">
           <div class="hotel-type-details">
             <div class="hotel-type">Гостиница</div>
@@ -149,7 +151,7 @@
         <img src="img/inner-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
       </div>
       <div class="hotel-info">
-        <a href="#" class="hotel-name">Desert quail inn</a>
+        <div><a href="#" class="hotel-name">Desert quail inn</a></div>
         <div class="hotel-info-left">
           <div class="hotel-type-details">
             <div class="hotel-type">Мотель</div>
@@ -173,7 +175,7 @@
         <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCCO DIABLO">
       </div>
       <div class="hotel-info">
-        <a href="#" class="hotel-name">Villas at pocco diablo</a>
+        <div><a href="#" class="hotel-name">Villas at pocco diablo</a></div>
         <div class="hotel-info-left">
           <div class="hotel-type-details">
             <div class="hotel-type">Апартаменты</div>
