--- a/inner.html
+++ b/inner.html
@@ -8,25 +8,26 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<div class="wrapper">
   <header class="main-header">
     <div class="container">
       <nav class="main-navigation clearfix">
         <ul class="main-navigation-left">
-          <li>
+          <li class="nav-li-left">
             <a href="index.html">Информация</a>
           </li>
-          <li>
+          <li class="nav-li-left">
             <a href="#">Фото и видео</a>
           </li>
         </ul>
         <div class="index-logo">
-          <img src="img/logo-both.png" width="138" height="70" alt="лого">
+          <a href="index.html"><img src="img/logo-both.png" width="138" height="70" alt="лого"></a>
         </div>
         <ul class="main-navigation-right">
-          <li>
+          <li class="nav-li-right">
             <a href="#">Карта штата</a>
           </li>
-          <li>
+          <li class="nav-li-right">
             <a class="active">Гостиницы</a>
           </li>
         </ul>
@@ -215,5 +216,6 @@
       </section>
     </div>
   </footer>
+</div>
 </body>
 </html>
