--- a/inner.html
+++ b/inner.html
@@ -2,41 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Гостиницы Седоны</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="wrapper">
-  <header class="main-header">
-    <div class="container">
-      <nav class="main-navigation clearfix">
-        <ul class="main-navigation-left">
-          <li class="nav-li-left">
-            <a href="index.html">Информация</a>
-          </li>
-          <li class="nav-li-left">
-            <a href="#">Фото и видео</a>
-          </li>
-        </ul>
-        <div class="index-logo">
-          <a href="index.html"><img src="img/logo-both.png" width="138" height="70" alt="лого"></a>
-        </div>
-        <ul class="main-navigation-right">
-          <li class="nav-li-right">
-            <a href="#">Карта штата</a>
-          </li>
-          <li class="nav-li-right">
-            <a class="active">Гостиницы</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <main class="container">
-    <div class="inner-search clearfix">
-      <form action="/echo" method="get">
+  <div class="wrapper">
+    <header class="main-header">
+      <div class="container">
+        <nav class="main-navigation clearfix">
+          <ul class="main-navigation-left">
+            <li class="nav-li-left">
+              <a href="index.html">Информация</a>
+            </li>
+            <li class="nav-li-left">
+              <a href="#">Фото и видео</a>
+            </li>
+          </ul>
+          <div class="index-logo">
+            <a href="index.html"><img src="img/logo-both.png" width="138" height="70" alt="лого"></a>
+          </div>
+          <ul class="main-navigation-right">
+            <li class="nav-li-right">
+              <a href="#">Карта штата</a>
+            </li>
+            <li class="nav-li-right">
+              <a class="active">Гостиницы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="container">
+      <div class="inner-search clearfix">
+        <form action="/echo" method="get">
           <div class="inner-checkboxes-infrastructure">
             <div class="inner-content-title">Инфраструктура:</div>
             <ul class="inner-checkboxes-list">
@@ -106,116 +106,110 @@
             </div>
             <button class="inner-btn-transparent" type="submit">Показать</button>
           </div>
-      </form>
-    </div>
-    <div class="container-inner">
-    <div class="search-results clearfix">
-      <div class="number-items">Найдено:3</div>
-      <div class="inner-sort">Сортировка:</div>
-      <div class="inner-types">
-        <a class="types-btn active">По цене</a>
-        <a class="types-btn" href="#">По типу</a>
-        <a class="types-btn" href="#">По рейтингу</a>
+        </form>
       </div>
-      <div class="arrows">
-        <a class="arrow arrow-up" href="#">по возрастанию</a>
-        <a class="arrow arrow-down" href="#">по убыванию</a>
-      </div>
-    </div>
-    <div class="hotel-all">
-    <div class="hotel clearfix">
-      <div class="hotel-img">
-        <img src="img/inner-amara.jpg" width="135" height="90" alt="AMARA RESORT & SPA">
-      </div>
-      <div class="hotel-info">
-        <div><a href="#" class="hotel-name">Amara resort & spa</a></div>
-        <div class="hotel-info-left">
-          <div class="hotel-type-details">
-            <div class="hotel-type">Гостиница</div>
-            <a class="btn-details">Подробнее</a>
-          </div>
+      <div class="container-inner">
+      <div class="search-results clearfix">
+        <div class="number-items">Найдено:3</div>
+        <div class="inner-sort">Сортировка:</div>
+        <div class="inner-types">
+          <a class="types-btn active">По цене</a>
+          <a class="types-btn" href="#">По типу</a>
+          <a class="types-btn" href="#">По рейтингу</a>
         </div>
-        <div class="hotel-info-right">
-          <div class="hotel-price-order">
-            <div class="hotel-price">от 4000 р.</div>
-            <a class="btn-order">Забронировать</a>
-          </div>
+        <div class="arrows">
+          <a class="arrow arrow-up" href="#">по возрастанию</a>
+          <a class="arrow arrow-down" href="#">по убыванию</a>
         </div>
       </div>
-      <div class="hotel-rating">
-        <!--<img class="hotel-stars" src="img/inner-stars-4.png" width="89" height="17" alt="4 stars">-->
-        <div class="hotel-rating-number four-stars">Рейтинг: 8.5</div>
-      </div>
-    </div>
-    <div class="hotel clearfix">
-      <div class="hotel-img">
-        <img src="img/inner-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
-      </div>
-      <div class="hotel-info">
-        <div><a href="#" class="hotel-name">Desert quail inn</a></div>
-        <div class="hotel-info-left">
-          <div class="hotel-type-details">
-            <div class="hotel-type">Мотель</div>
-            <a class="btn-details">Подробнее</a>
+      <div class="hotel-all">
+        <div class="hotel clearfix">
+          <div class="hotel-img">
+            <img src="img/inner-amara.jpg" width="135" height="90" alt="AMARA RESORT & SPA">
+          </div>
+          <div class="hotel-info">
+            <div><a href="#" class="hotel-name">Amara resort & spa</a></div>
+            <div class="hotel-info-left">
+              <div class="hotel-type-details">
+                <div class="hotel-type">Гостиница</div>
+                <a class="btn-details">Подробнее</a>
+              </div>
+            </div>
+            <div class="hotel-info-right">
+              <div class="hotel-price-order">
+                <div class="hotel-price">от 4000 р.</div>
+                <a class="btn-order">Забронировать</a>
+              </div>
+            </div>
+          </div>
+          <div class="hotel-rating">
+            <div class="hotel-rating-number four-stars">Рейтинг: 8.5</div>
           </div>
         </div>
-        <div class="hotel-info-right">
-          <div class="hotel-price-order">
-            <div class="hotel-price">от 3000 р.</div>
-            <a class="btn-order">Забронировать</a>
+        <div class="hotel clearfix">
+          <div class="hotel-img">
+            <img src="img/inner-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
+          </div>
+          <div class="hotel-info">
+            <div><a href="#" class="hotel-name">Desert quail inn</a></div>
+            <div class="hotel-info-left">
+              <div class="hotel-type-details">
+                <div class="hotel-type">Мотель</div>
+                <a class="btn-details">Подробнее</a>
+              </div>
+            </div>
+            <div class="hotel-info-right">
+              <div class="hotel-price-order">
+                <div class="hotel-price">от 3000 р.</div>
+                <a class="btn-order">Забронировать</a>
+              </div>
+            </div>
+          </div>
+          <div class="hotel-rating">
+            <div class="hotel-rating-number three-stars">Рейтинг: 8.9</div>
+          </div>
+        </div>
+        <div class="hotel clearfix hotel-last">
+          <div class="hotel-img">
+            <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCCO DIABLO">
+          </div>
+          <div class="hotel-info">
+            <div><a href="#" class="hotel-name">Villas at pocco diablo</a></div>
+            <div class="hotel-info-left">
+              <div class="hotel-type-details">
+                <div class="hotel-type">Апартаменты</div>
+                <a class="btn-details">Подробнее</a>
+              </div>
+            </div>
+            <div class="hotel-info-right">
+              <div class="hotel-price-order">
+                <div class="hotel-price">от 2000 р.</div>
+                <a class="btn-order">Забронировать</a>
+              </div>
+            </div>
+          </div>
+          <div class="hotel-rating">
+            <div class="hotel-rating-number two-stars">Рейтинг: 9.2</div>
           </div>
         </div>
       </div>
-      <div class="hotel-rating">
-        <!--<img class="hotel-stars" src="img/inner-stars-3.png" width="67" height="17" alt="3 stars">-->
-        <div class="hotel-rating-number three-stars">Рейтинг: 8.9</div>
       </div>
-    </div>
-    <div class="hotel clearfix hotel-last">
-      <div class="hotel-img">
-        <img src="img/inner-poco-diablo.jpg" width="135" height="90" alt="VILLAS AT POCCO DIABLO">
-      </div>
-      <div class="hotel-info">
-        <div><a href="#" class="hotel-name">Villas at pocco diablo</a></div>
-        <div class="hotel-info-left">
-          <div class="hotel-type-details">
-            <div class="hotel-type">Апартаменты</div>
-            <a class="btn-details">Подробнее</a>
-          </div>
+    </main>
+    <footer class="footer">
+      <div class="container clearfix">
+        <div class="footer-hashtag foot">
+          #VisitSedona
         </div>
-        <div class="hotel-info-right">
-          <div class="hotel-price-order">
-            <div class="hotel-price">от 2000 р.</div>
-            <a class="btn-order">Забронировать</a>
-          </div>
-        </div>
+        <section class="footer-social foot">
+          <a class="social-btn social-btn-tw" href="#"></a>
+          <a class="social-btn social-btn-fb" href="#"></a>
+          <a class="social-btn social-btn-you" href="#"></a>
+        </section>
+        <section class="footer-copyright foot">
+          <div><a class="logo-image" href="#">Website by</a></div>
+        </section>
       </div>
-      <div class="hotel-rating">
-        <!--<img class="hotel-stars" src="img/inner-stars-2.png" width="45" height="17" alt="2 stars">-->
-        <div class="hotel-rating-number two-stars">Рейтинг: 9.2</div>
-      </div>
-    </div>
-    </div>
-    </div>
-  </main>
-  <footer class="inner-footer">
-    <div class="container clearfix">
-      <div class="footer-hashtag foot">
-        #VisitSedona
-      </div>
-      <section class="footer-social foot">
-        <a class="social-btn social-btn-tw" href="#"><!--<img src="img/t-logo.png" width="17" height="15" alt="twitter">--></a>
-        <a class="social-btn social-btn-fb" href="#"><!--<img src="img/f-logo.png" width="10" height="19" alt="facebook">--></a>
-        <a class="social-btn social-btn-you" href="#"><!--<img src="img/y-logo.png" width="20" height="16" alt="youtube">--></a>
-      </section>
-      <section class="footer-copyright foot">
-        <div><a class="logo-image" href="#">Website by</a></div>
-        <!--<a class="logo-image" href="#">
-          <img src="img/html-academy-logo.png" width="113" height="39" alt="html academy logo">
-        </a>-->
-      </section>
-    </div>
-  </footer>
-</div>
+    </footer>
+  </div>
 </body>
 </html>
