--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>HTML Academy: Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
+  <!--<link href="css/style-mini.css" rel="stylesheet">-->
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -165,25 +166,7 @@
       </div>
     </footer>
   </div>
-<script>
-	var link = document.querySelector(".index-btn");
-	var popup = document.querySelector(".index-modal");
-	var checkin = popup.querySelector(".check-in");
-
-	link.addEventListener("click", function(event) {
-	  event.preventDefault();
-	  popup.classList.toggle("index-modal-hide");
-	  checkin.focus();
-      });
-
-  window.addEventListener("keydown", function(event) {
-    if (event.keyCode === 27) {
-      if (!popup.classList.contains("index-modal-hide")) {
-        popup.classList.add("index-modal-hide");
-      }
-    }
-  });
-</script>
+  <script src="js/script-mini.js"></script>
 </body>
 </html>
 
