Поставил паддинг 0 ссылке в логтипе

--- a/inner.html
+++ b/inner.html
@@ -21,7 +21,7 @@
             </li>
           </ul>
           <div class="index-logo">
-            <a href="index.html"><img src="img/logo-both.png" width="138" height="70" alt="лого"></a>
+            <a class="logo-link" href="index.html"><img src="img/logo-both.png" width="138" height="70" alt="лого"></a>
           </div>
           <ul class="main-navigation-right">
             <li class="nav-li-right">
