Подправил футер на глаз. Сделал инлайнблоками низ формы

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="index-tagline">
           Седона - небольшой городок в Аризоне,
           <br>
-          заслуживающий большего!
+          заслуживающий большего Аризоне!
         </div>
         <div class="index-reasons">
           Рассмотрим 5 причин, по которым Седона лучше, чем Гранд Каньон!
@@ -120,8 +120,8 @@
             <input class="input-date" type="text" id="date-check-out" placeholder="4 июля 2017" required>
 
             <div class="index-amount clearfix">
-              <div class="index-amount-adult clearfix">
-                <div class="index-amount-label-left">
+              <!--<div class="index-amount-adult clearfix">-->
+                <div class="index-amount-label-adult div-input">
                   <label class="label-amount label-adult pic" for="amount-adult">Взрослые:</label>
                 </div>
                 <div class=" div-input div-input-adult">
@@ -129,9 +129,9 @@
                   <input class="input-amount adult" type="text" value="2" id="amount-adult" name="amount-adult" required>
                   <a class="adult-minus minus">-</a>
                 </div>
-              </div>
-              <div class="index-amount-child clearfix">
-                <div class="index-amount-label-left">
+              <!--</div>-->
+              <!--<div class="index-amount-child clearfix">-->
+                <div class="index-amount-label-child div-input">
                   <label class="label-amount label-child pic" for="amount-children">Дети:</label>
                 </div>
                 <div class="div-input div-input-child">
@@ -139,7 +139,7 @@
                   <input class="input-amount child" type="text" value="0" id="amount-children" name="amount-children">
                   <a class="adult-minus minus">-</a>
                 </div>
-              </div>
+              <!--</div>-->
             </div>
             <button class="modal-btn">Найти</button>
           </div>
@@ -161,7 +161,6 @@
         </section>
         <section class="footer-copyright foot">
           <div><a class="logo-image" href="#">Website by</a></div>
-
         </section>
       </div>
     </footer>
